--- a/package.json
+++ b/package.json
@@ -15,5 +15,13 @@
   "bugs": {
     "url": "https://github.com/adriangarcia5/node-db-challenge/issues"
   },
-  "homepage": "https://github.com/adriangarcia5/node-db-challenge#readme"
+  "homepage": "https://github.com/adriangarcia5/node-db-challenge#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "knex": "^0.19.5",
+    "sqlite3": "^4.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.3"
+  }
 }
