--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "In this challenge, you design and build a Data Model and a RESTful API that stores data into a Relational Database.",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon run index.js"
+    "server": "nodemon index.js"
   },
   "repository": {
     "type": "git",
